--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@Components/*": ["./src/components/*"],
+      "@Assets/*":[".src/assets/*"]
+    }
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["./config-overrides.js"]
 }
