--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux-saga": "^1.1.3",
     "sass": "^1.52.3",
     "typescript": "^4.7.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
