chore: removing imports without use

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "noUnusedLocals": true,
     "resolveJsonModule": true,
+    
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
